Changes to VectorUtil and RenderingSystem